--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -12,8 +12,9 @@ body {
 .item {
   margin: 4px 0;
   padding: 10px 16px;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 500;
+  font-family: "Open Sans", Arial, "Lucida Grande", sans-serif;
   cursor: pointer;
   border-radius: 6px;
 }
