--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,24 +1,32 @@
 body {
+  width: 200px;
   margin: 0;
   padding: 0;
   color: #1A202C;
 }
 
+h1 {
+  font-size: 16px;
+  margin: 20px 15px;
+}
+
 #container {
-  width: 160px;
-  padding: 8px;
+  margin: 10px;
 }
 
 .item {
   margin: 4px 0;
-  padding: 10px 16px;
+  padding: 10px 15px;
   font-size: 14px;
   font-weight: 500;
   font-family: "Open Sans", Arial, "Lucida Grande", sans-serif;
   cursor: pointer;
-  border-radius: 6px;
+  border-radius: 5px;
 }
+
 .item-selected {
-  background: #EDF2F7;
-  box-shadow: inset 0 2px 4px 0 rgba(0,0,0,.06);
+  background: #1e90ff;
+  color: #ffffff;
+  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, .06);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
 }
