--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,95 +1,91 @@
+@import url(./view/ListView.css);
+@import url(./view/DetailView.css);
+
+:root {
+  --width: 200px;
+  --border-radius: 4px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  width: 200px;
+  width: var(--width);
   margin: 0;
   padding: 0;
   color: #1A202C;
   font-size: 14px;
+  font-family: "Open Sans", Arial, "Lucida Grande", sans-serif;
 }
 
 h1 {
   font-size: 16px;
-  margin: 20px 15px;
+  margin: 10px 0 20px 0;
 }
 
 .view {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  padding: 10px;
   background: #ffffff;
-  opacity: 1;
-  transition: transform 250ms, opacity 250ms;
+  display: none;
 }
-.view-hidden {
-  transform: translateX(200px);
-  opacity: 0;
-  visibility: hidden;
+.view-active {
+  display: block;
 }
 
-.item-list {
-  margin: 10px;
+label {
+  display: inline-block;
+  color: #777777;
+  font-size: .9em;
+  margin-bottom: 2px;
 }
 
-/* Workspace list */
-.item, #new-workspace-button {
-  min-height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 4px 0;
+input:focus {
+  outline-color: #2962ff;
+}
+
+input[type=text] {
+  border-radius: var(--border-radius);
+  border: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 6px 4px;
+}
+
+button {
+  display: inline-block;
+  min-width: 60px;
   padding: 5px 10px;
-  font-weight: 500;
-  font-family: "Open Sans", Arial, "Lucida Grande", sans-serif;
+  border: 1px solid #e0e0e0;
+  border-radius: var(--border-radius);
   cursor: pointer;
-  border-radius: 5px;
+  color: #212121;
+  background-color: transparent;
+  transition: all 0.15s;
 }
-.item:hover {
-  background: #eeeeee;
+button:hover {
+  background-color: #fafafa;
 }
-.item:active {
-  background: #e0e0e0;
+button:focus {
+  outline: none;
 }
 
-.item-selected {
+button.submit {
   background: #2979ff;
+  border-color: #2979ff;
   color: #ffffff;
-  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, .06);
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-.item-selected:hover {
-  background: #2979ff;
-}
-.item-selected:active {
+button.submit:active, button.submit:focus-visible {
   background: #2962ff;
 }
 
-.item-more-button {
-  width: 24px;
-  height: 24px;
-  background: url("../../icons/more_horiz-black-18dp.svg") center center no-repeat;
-  background-size: contain;
-  opacity: 0;
-  visibility: hidden;
-  border-radius: 5px;
-}
-.item-more-button:hover {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-.item-more-button:active {
-  background-color: rgba(0, 0, 0, 0.4);
+.buttons {
+  display: flex;
+  flex-grow: 0;
+  margin-top: 20px;
+  justify-content: flex-end;
 }
 
-.item:hover .item-more-button {
-  visibility: visible;
-  opacity: 0.5;
-  transition: visibility 0s 0.5s, opacity 0.25s 0.5s;
-}
-
-.item-selected .item-more-button {
-  filter: invert(1);
-}
-
-#new-workspace-button {
-  color: #888;
-}
