--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -62,6 +62,7 @@ button {
   cursor: pointer;
   color: #212121;
   background-color: transparent;
+  font-weight: 600;
   transition: all 0.15s;
 }
 button:hover {
