--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,14 +1,16 @@
+@import url(../icons/icons.css);
 @import url(./view/ListView.css);
 @import url(./view/DetailView.css);
 
 :root {
-  --width: 200px;
+  --width: 220px;
   --border-radius: 4px;
 }
 
 * {
   margin: 0;
   padding: 0;
+  outline-color: #2962ff;
 }
 
 body {
@@ -22,7 +24,7 @@ body {
 
 h1 {
   font-size: 16px;
-  margin: 10px 0 20px 0;
+  margin: 10px 0;
 }
 
 .view {
@@ -35,14 +37,10 @@ h1 {
 }
 
 label {
-  display: inline-block;
-  color: #777777;
+  display: block;
+  color: #616161;
   font-size: .9em;
-  margin-bottom: 2px;
-}
-
-input:focus {
-  outline-color: #2962ff;
+  margin: 15px 0 4px 0;
 }
 
 input[type=text] {
@@ -50,10 +48,11 @@ input[type=text] {
   border: 1px solid #d0d0d0;
   box-sizing: border-box;
   width: 100%;
-  padding: 6px 4px;
+  padding: 6px;
+  font-size: 1em;
 }
 
-button {
+.button {
   display: inline-block;
   min-width: 60px;
   padding: 5px 10px;
@@ -65,21 +64,21 @@ button {
   font-weight: 600;
   transition: all 0.15s;
 }
-button:hover {
+.button:hover {
   background-color: #fafafa;
 }
-button:focus {
+.button:focus {
   outline: none;
 }
 
-button.submit {
+.button.primary {
   background: #2979ff;
   border-color: #2979ff;
   color: #ffffff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-button.submit:active, button.submit:focus-visible {
+.button.primary:active, .button.primary:focus-visible {
   background: #2962ff;
 }
 
