Add button redesign

--- a/src/popup/view/ListView.css
+++ b/src/popup/view/ListView.css
@@ -64,8 +64,8 @@
 }
 
 #new-workspace-button {
-    margin: 6px 4px;
-    padding: 4px;
+    margin: 8px 4px;
+    padding: 2px 8px 2px 4px;
     color: #333;
     opacity: 0.4;
     background: none;
