--- a/app/popup/view/ListView.css
+++ b/app/popup/view/ListView.css
@@ -51,6 +51,7 @@
     opacity: 0;
     visibility: hidden;
     border-radius: 5px;
+    background-size: 75% 75%;
 }
 .item-edit-button:hover {
     background-color: rgba(0, 0, 0, 0.2);
