--- a/app/popup/popup.css
+++ b/app/popup/popup.css
@@ -3,20 +3,20 @@
 @import url(./view/DetailView.css);
 
 :root {
-    --width: 220px;
+    --width: 200px;
     --border-radius: 4px;
-    --color-primary: #2979ff;
-    --color-primary-dark: #2962ff;
-    --color-bluegray-50: #eceff1;
-    --color-bluegray-100: #cfd8dc;
-    --color-red-600: #e53935;
-    --color-red-800: #c62828;
+    --color-ui-primary: #2979ff;
+    --color-ui-primary-dark: #2962ff;
+    --color-ui-neutral-50: #eceff1;
+    --color-ui-neutral-100: #cfd8dc;
+    --color-ui-danger: #e53935;
+    --color-ui-danger-dark: #c62828;
 }
 
 * {
     margin: 0;
     padding: 0;
-    outline-color: var(--color-primary-dark);
+    outline-color: var(--color-ui-primary-dark);
 }
 
 :focus:not(.focus-visible) {
@@ -51,7 +51,7 @@ label {
     display: block;
     color: #616161;
     font-size: .9em;
-    margin: 15px 0 4px 0;
+    margin: 15px 0 5px 0;
 }
 
 input[type=text] {
@@ -59,7 +59,7 @@ input[type=text] {
     border: 1px solid #d0d0d0;
     box-sizing: border-box;
     width: 100%;
-    padding: 6px;
+    padding: 8px 6px 6px 6px;
     font-size: 1em;
 }
 
@@ -86,19 +86,19 @@ button {
 }
 
 .button.primary {
-    background: var(--color-primary);
-    border-color: var(--color-primary);
+    background: var(--color-ui-primary);
+    border-color: var(--color-ui-primary);
     color: #ffffff;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .button.primary:active {
-    background: var(--color-primary-dark);
+    background: var(--color-ui-primary-dark);
 }
 
 .button.primary.focus-visible {
-    background: var(--color-primary-dark);
+    background: var(--color-ui-primary-dark);
     outline: none;
     transform: scale(1.05);
 }
