--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,6 +1,7 @@
 @import url(../icons/icons.css);
 @import url(./view/ListView.css);
 @import url(./view/DetailView.css);
+@import url(./view/RemoveView.css);
 
 :root {
     --width: 230px;
@@ -87,7 +88,7 @@ button {
     background-color: #fafafa;
 }
 
-.button.primary {
+.button-primary {
     background: var(--color-ui-primary);
     border-color: var(--color-ui-primary);
     color: #ffffff;
@@ -95,11 +96,11 @@ button {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.button.primary:active {
+.button-primary:active, .button-primary:hover {
     background: var(--color-ui-primary-dark);
 }
 
-.button.primary.focus-visible {
+.button-primary.focus-visible {
     background: var(--color-ui-primary-dark);
     outline: none;
     transform: scale(1.05);
