--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,4 +1,4 @@
-@import url(../icons/icons.css);
+@import url(icons.css);
 @import url(./view/ListView.css);
 @import url(./view/DetailView.css);
 @import url(./view/RemoveView.css);
