--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -37,12 +37,12 @@ body {
 
 h1 {
     font-size: 18px;
-    margin: 12px 4px;
+    margin: 10px 0;
     color: var(--color-ui-neutral-600);
 }
 
 .view {
-    padding: 8px;
+    padding: 12px;
     background: #ffffff;
     display: none;
 }
