--- a/src/popup/view/DetailView.css
+++ b/src/popup/view/DetailView.css
@@ -10,6 +10,7 @@
     border-radius: 50% !important;
     border: none;
     cursor: pointer;
+    opacity: 0.9;
 }
 #workspace-color-picker .color:focus {
     animation: bump 250ms ease-in-out;
