--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -42,6 +42,10 @@ h1 {
     color: var(--color-ui-neutral-600);
 }
 
+p {
+    line-height: 1.4em;
+}
+
 .view {
     padding: 12px;
     background: #ffffff;
@@ -89,7 +93,7 @@ button {
 }
 
 .button:hover {
-    background-color: #fafafa;
+    background-color: var(--color-ui-neutral-50);
 }
 
 .button-primary {
