--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -20,6 +20,7 @@
 * {
     margin: 0;
     padding: 0;
+    accent-color: var(--color-ui-primary);
     outline-color: var(--color-ui-primary-dark);
     font-family: "Roboto", "Open Sans", Arial, "Lucida Grande", sans-serif;
 }
@@ -56,13 +57,6 @@ p {
     display: block;
 }
 
-label > span:first-child {
-    display: block;
-    color: #616161;
-    font-size: .9em;
-    margin: 14px 0 4px 0;
-}
-
 input[type=text] {
     border-radius: var(--border-radius);
     border: 1px solid #d0d0d0;
@@ -70,6 +64,12 @@ input[type=text] {
     width: 100%;
     padding: 8px 6px 6px 6px;
     font-size: 1em;
+}
+
+input[type=checkbox] {
+    width: 16px;
+    height: 16px;
+    margin-inline: 4px 6px;
 }
 
 button {
