--- a/src/popup/view/ListView.css
+++ b/src/popup/view/ListView.css
@@ -1,14 +1,17 @@
 #view-list .workspace-list {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     margin-top: 16px;
 }
 
 #view-list .item {
-    width: 100%;
+    width: calc(100% + 1px); /* Prevent unwanted text ellipsis */
     min-height: 36px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 4px 0;
+    margin: 2px 0;
     padding: 3px 8px;
     font-weight: 500;
     text-align: start;
@@ -50,11 +53,13 @@
 }
 
 #view-list .item-edit-button {
+    width: 24px;
     flex-shrink: 0;
-    width: 0;
     opacity: 0;
+    margin-left: 6px;
     border-radius: 5px;
     background-size: 75% 75%;
+    visibility: hidden;
     overflow: hidden;
 }
 #view-list .item-edit-button:hover {
@@ -64,9 +69,9 @@
     background-color: rgba(0, 0, 0, 0.4);
 }
 #view-list .item:hover .item-edit-button {
-    width: 24px;
+    visibility: visible;
     opacity: 0.5;
-    transition: width 0s 0.5s, opacity 0.2s 0.5s;
+    transition: visibility 0s 0.5s, opacity 0.2s 0.5s;
 }
 
 #view-list .buttons {
