--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,20 +1,10 @@
 @import url(./icons.css);
+@import url(./variables.css);
 @import url(./view/EmptyListView.css);
 @import url(./view/ListView.css);
 @import url(./view/DetailView.css);
 @import url(./view/RemoveView.css);
 @import url(./view/DebugView.css);
-
-:root {
-    --border-radius: 4px;
-    --color-ui-primary: #2979ff;
-    --color-ui-primary-dark: #2962ff;
-    --color-ui-neutral-50: #eceff1;
-    --color-ui-neutral-100: #cfd8dc;
-    --color-ui-neutral-600: #546e7a;
-    --color-ui-danger: #e53935;
-    --color-ui-danger-dark: #c62828;
-}
 
 * {
     margin: 0;
