--- a/src/options/options.css
+++ b/src/options/options.css
@@ -3,7 +3,11 @@ body {
 }
 
 dl {
-    margin: 0;
+    margin: 16px 0 0;
+
+    &:first-child {
+        margin-top: 0;
+    }
 }
 
 dt {
@@ -22,4 +26,16 @@ dd.radiogroup > label {
 
 dd.radiogroup input[type="radio"] {
     transform: translateY(2px);
+}
+
+dd > button {
+    margin-top: 8px;
+    margin-right: 12px;
+}
+
+dd.info {
+    display: none;
+    color: green;
+    font-weight: bold;
+    margin-top: 4px;
 }
