--- a/src/options/options.css
+++ b/src/options/options.css
@@ -40,6 +40,10 @@ button {
     cursor: pointer;
     color: #212121;
     font-weight: 500;
+    background-color: transparent;
+}
+button:hover {
+    background-color: var(--color-ui-neutral-50);
 }
 
 #import-info {
